# ese5190-2022-lab2b-esp

lab/01_registers/: README.md  part1.c
lab/02_repl/: README.md
lab/03_sequencer/: README.md
lab/04_slow_motion/: README.md  part4.c  part_4.py
lab/05_i2c_traffic/: IMG_1855.HEIC  README.md
lab/06_pioscope/: README.md
lab/07_pio_sequencer/: README.md  part7.c
lab/08_adps_protocol/: CMakeLists.txt  README.md  i2c.pio  part8.c  pico_sdk_import.cmake
lab/09_lab_on_a_chip/: IMG_1999.HEIC  IMG_2001.HEIC  IMG_2002.HEIC  IMG_2003.HEIC  README.md  part9.c  pio_i2c.c  pio_i2c.h  ws2812.c  ws2812.h
lab/10_protoboard/: README.md
